Kubernetes/projects/django_project/demoP/EKS_YAMLS/django_eks_yamls/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      # securityContext:
      #   runAsNonRoot: true
      containers:
        - name: django
          image: 637043415174.dkr.ecr.ap-south-2.amazonaws.com/little-lemon-django-app:latest
          ports:
            - containerPort: 8001
          readinessProbe:
            httpGet:
              path: /
              port: 8001
            initialDelaySeconds: 15
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 8001
            initialDelaySeconds: 30
            periodSeconds: 10
